--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="w-full h-screen">
+    <div id="root"></div>
     <header>
         <h1 class="bg-gray-100 text-black font-bold text-2xl">カメラで感情認識</h1>
     </header>
@@ -27,7 +28,7 @@
         </div>
     </main>
     
-
+    <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
